--- a/client/package.json
+++ b/client/package.json
@@ -11,8 +11,14 @@
 		"format": "prettier --write ."
 	},
 	"dependencies": {
+		"bootstrap": "^5.3.0",
 		"react": "^18.2.0",
-		"react-dom": "^18.2.0"
+		"react-bootstrap": "^2.7.4",
+		"react-dom": "^18.2.0",
+		"react-redux": "^8.0.7",
+		"react-router-dom": "^6.12.1",
+		"redux": "^4.2.1",
+		"redux-thunk": "^2.4.2"
 	},
 	"devDependencies": {
 		"@types/react": "^18.0.28",
@@ -28,6 +34,7 @@
 		"eslint-plugin-react-hooks": "^4.6.0",
 		"eslint-plugin-react-refresh": "^0.3.4",
 		"prettier": "^2.8.8",
+		"sass": "^1.63.2",
 		"vite": "^4.3.2"
 	}
 }
